fix wrapping

--- a/editor/style/bitsyStyle.css
+++ b/editor/style/bitsyStyle.css
@@ -90,3 +90,7 @@
 	border-radius: var(--bitsy-space-s);
 	height: var(--bitsy-size-m);
 }
+
+.bitsy-menu-scrollcontent {
+	white-space: normal;
+}
